:bug: Timeline pin var ikke riktig alignet

--- a/@navikt/internal/css/timeline.css
+++ b/@navikt/internal/css/timeline.css
@@ -12,7 +12,6 @@
   height: 1rem;
   box-sizing: content-box;
   grid-column: 2;
-  margin-left: var(--a-spacing-8);
 }
 
 .navdsi-timeline__row-label {
@@ -40,7 +39,6 @@
   display: flex;
   background: var(--ac-timeline-row-bg, var(--a-surface-subtle));
   margin: var(--a-spacing-4) 0;
-  padding-left: var(--a-spacing-8);
   grid-column: 2;
 }
 
